overflow fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
   }
 
 html, body {
-    width: 100vw;
+    width: 100%;
     height: 900vh;
     background-color: black;
     color: white;
@@ -32,19 +32,17 @@ html, body {
 }
 
 img {
-    width: 100vh;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     overflow: hidden;
-    
-    
 }
 
 nav {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     padding: 1.5em;
     display: flex;
     justify-content: space-between;
